# charlotte

./: .gitignore  LICENSE  README.md  charlotte.spec  keys.json  main.py  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: release.yml
decoders/: ass.py  channel.py  decode_tables.py  hca.py  ivf.py  usm.py
utils/: keys.py  languages.py  mux.py  test.py
