[project]
name = "charlotte"
version = "0.1.0"
description = "A cutscene encoder tool for a certain popular anime game."
authors = [{ name = "lunarmint", email = "developer@chocomint.dev" }]
requires-python = ">=3.13"
readme = "README.md"
maintainers = [{ name = "Mint" }]
dependencies = [
    "pyinstaller==6.17.0",
    "pysubs2>=1.8.0",
    "typer>=0.21.0",
]

[dependency-groups]
dev = [
    "deptry>=0.24.0",
    "ruff>=0.14.10",
]

[tool.uv]
package = false
default-groups = [
    "dev",
]

[tool.ruff.lint]
select = [
    "ASYNC", # flake8-async
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DTZ", # flake8-datetimez (enforce timezone-aware datetimes)
    "E", # pycodestyle rules
    "F", # pyflakes rules
    "I", # isort rules
    "PERF", # (perflint) prevent performance anti-patterns
    "PLE", # pylint errors
    "PLW", # pylint rules
    "PIE", # flake8-pie (misc. lints for cleaner code)
    "RUF", # ruff-specific rules (catch common mistakes)
    "N", # pep8-naming
    "Q", # flake8-quotes
    "RSE", # flake8-raise (simplify raise statements)
    "RET", # flake8-return (simplify return statements)
    "SIM", # flake8-simplify (suggest simpler code)
    "TCH", # flake8-type-checking
    "TID", # flake8-tidy-imports
    "T20", # (disallow print statements) keep debugging statements out of the codebase
    "W", # pycodestyle warnings
    "UP", # (pyupgrade) auto-upgrade syntax to newer versions of Python
]

extend-safe-fixes = [
    "TCH", # move import from and to TYPE_CHECKING blocks
]

[tool.ruff.lint.isort]
lines-between-types = 1
lines-after-imports = 2

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "lf"

[tool.ruff.lint.pydocstyle]
convention = "google"
